mobile sidebar z-index bug fix

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ body{
     display: none;
     padding: 0 10px;
     padding-bottom: 5px;
-    z-index: 99999;
+    z-index: 99;
 }
 
 .mobile-sidebar .element{
